<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"

    >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        tools:context="de.muensterinside.mobile.LocationActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/locationLayout">

            <!-- Letzten 3 Kommentare -->
            <ListView
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:id="@+id/smallCommentList"
                android:choiceMode="singleChoice"
                android:layout_below="@+id/textViewExampleDescription"
                android:layout_alignParentEnd="true" />


            <!-- Bild -->
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/button"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/ic_launcher" />

            <!-- Überschrift: Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/location_name"
                android:id="@+id/textViewName"
                android:textColor="#000000"
                android:layout_toEndOf="@+id/button"
                android:textStyle="bold" />

            <!-- Überschrift: VoteValue -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/location_vote"
                android:id="@+id/textViewVote"
                android:textColor="#000000"
                android:layout_below="@+id/textViewName"
                android:layout_toEndOf="@+id/button"
                android:layout_marginTop="55dp"
                android:textStyle="bold" />

            <!-- Überschrift: Link -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/location_link"
                android:id="@+id/textViewLink"
                android:textColor="#000000"
                android:layout_below="@+id/button"
                android:textStyle="bold" />

            <!-- Location Name -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/example"
                android:id="@+id/textViewExampleName"
                android:textColor="#000000"
                android:layout_below="@+id/textViewName"
                android:layout_toEndOf="@+id/button" />

            <!-- Location VoteValue -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/example"
                android:id="@+id/textViewExampleVote"
                android:textColor="#000000"
                android:layout_below="@+id/textViewVote"
                android:layout_toEndOf="@+id/button" />


            <!-- Location Link -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/example"
                android:id="@+id/textViewExampleLink"
                android:textColor="#033dfc"
                android:layout_below="@+id/textViewLink"
                android:layout_alignParentStart="true"
                android:clickable="true" />

            <!-- UpVote Button -->
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:drawableBottom="@drawable/ic_action_like"
                android:background="@android:color/transparent"
                android:id="@+id/up"
                android:clickable="true"
                android:layout_alignBottom="@+id/button"
                android:layout_toEndOf="@+id/button" />

            <!-- DownVote Button -->
            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:drawableBottom="@drawable/ic_action_dontlike"
                android:background="@android:color/transparent"
                android:id="@+id/down"
                android:clickable="true"
                android:layout_alignTop="@+id/up"
                android:layout_toEndOf="@+id/textViewVote" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/textView3"
                android:textColor="#000000"
                android:layout_below="@+id/textViewExampleLink"
                android:layout_alignParentStart="true" />

            <!-- Überschrift: Beschreibung -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/description"
                android:id="@+id/textViewDescription"
                android:textColor="#000000"
                android:layout_below="@+id/textViewExampleLink"
                android:layout_alignParentStart="true"
                android:textStyle="bold" />

            <!-- Location Description -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/example"
                android:id="@+id/textViewExampleDescription"
                android:textColor="#000000"
                android:layout_below="@+id/textView3"
                android:layout_toEndOf="@+id/textView3" />

            <!-- Weitere Kommentare Anzeigen Button -->
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showMoreComments"
                android:textColor="#000000"
                android:id="@+id/showComment"
                android:background="@android:color/transparent"
                android:layout_alignParentBottom="true"
                android:layout_toEndOf="@+id/textView3" />

        </RelativeLayout>

        <!-- Neuen Kommentar schreiben Button -->
        <Button style="?android:attr/buttonStyleSmall"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:drawableBottom="@drawable/ic_action_add"
            android:background="@android:color/transparent"
            android:id="@+id/writeComment"
            android:clickable="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"/>

    </RelativeLayout>
</ScrollView>
