<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WriteCommentActivity"
    android:background="#ffffff">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/showComment"
        android:id="@+id/textView_Comment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />

    <!-- Hier kann man einen Kommentar schreiben -->
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true"
        android:minHeight="120dp"
        android:inputType="textMultiLine"
        android:hint="@string/comment"
        android:ems="10"
        android:id="@+id/editText"
        android:backgroundTint="@color/colorPrimary"
        android:layout_below="@+id/textView_Comment"
        android:layout_alignParentStart="true"
        android:layout_marginTop="63dp"
        android:layout_toStartOf="@+id/confirmComment" />

    <!-- Neuen Kommentar bestätigen Button -->
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:drawableBottom="@drawable/ic_action_send"
        android:background="@android:color/transparent"
        android:id="@+id/confirmComment"
        android:clickable="true"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignParentEnd="true" />


</RelativeLayout>