<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">


    <!-- Liste der Kategorien -->
    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/categoryList"
        android:choiceMode="singleChoice"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <!-- Erstellen einer Kategorie -->
    <Button
        android:layout_width="60dp"
        android:layout_height="50dp"
        android:id="@+id/newLocation"
        android:background="@drawable/ic_action_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
