<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/name"
        android:paddingTop="25dip"
        android:paddingBottom="25dip"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#3030c0" />

    <TextView
        android:id="@+id/vote"
        android:paddingTop="25dip"
        android:paddingBottom="25dip"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|right"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:background="#3030c0" />
</LinearLayout>






