...

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="EXAMPLE"
        android:id="@+id/textViewExampleName"
        android:layout_below="@+id/textViewName"
        android:layout_toEndOf="@+id/button" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:drawableBottom="@drawable/ic_action_arrow_top"
        android:background="@android:color/transparent"
        android:id="@+id/up"
        android:clickable="true"
        android:layout_alignBottom="@+id/button"
        android:layout_toEndOf="@+id/button" />

    <Button
        style="?android:attr/buttonStyleSmall"
...
