...
        android:paddingTop="50dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/lets_go"
            android:id="@+id/button2"
            android:background="@color/colorPrimary"/>

    </LinearLayout>
</RelativeLayout>
</ScrollView>
